cluster/apps/default/syncthing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &name syncthing
  labels: &labels
    app.kubernetes.io/name: *name
spec:
  selector: *labels
  ports:
    - name: &port http
      protocol: TCP
      port: 8384
      targetPort: *port
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: syncthing-listdisc
  labels:
    app.kubernetes.io/name: syncthing
spec:
  selector:
    app.kubernetes.io/name: syncthing
  ports:
    - name: &dport discovery
      protocol: UDP
      port: 21027
      targetPort: *dport
    - name: &lport listen
      protocol: UDP
      port: 22000
      targetPort: *lport
  type: LoadBalancer
  loadBalancerIP: ${CONFIG_SYNCTHING_IP}
